--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.5.5",
