--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
         username: electr71
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./  # Tout le projet
-        server-dir: /home/electr71/ecole3/
+        server-dir: /ecole3/
