--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Deploy to cPanel via FTP
       uses: SamKirkland/FTP-Deploy-Action@4.3.0
       with:
-        server: 162.55.0.184
-        username: electr71
+        server: 178.32.105.28
+        username: pdhnkyzq
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./  # Tout le projet
         server-dir: /ecole1/
