--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,11 +24,11 @@ jobs:
     - name: Build the application
       run: npm run build
 
-    - name: Deploy to cPanel via FTP
-      uses: SamKirkland/FTP-Deploy-Action@4.3.0
-      with:
-        server: 178.32.105.28
-        username: pdhnkyzq
-        password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: ./  # Tout le projet
-        server-dir: /ecole/
+    # - name: Deploy to cPanel via FTP
+    #   uses: SamKirkland/FTP-Deploy-Action@4.3.0
+    #   with:
+    #     server: 178.32.105.28
+    #     username: pdhnkyzq
+    #     password: ${ secrets.FTP_PASSWORD }}
+    #     local-dir: ./  # Tout le projet
+    #     server-dir: /ecole/
